k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argo-demo
  template:
    metadata:
      labels:
        app: argo-demo
        version: "v1"
    spec:
      containers:
      - name: nginx
        image: nginx:1.26
        ports:
        - containerPort: 80
