k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-demo
spec:
  selector:
    app: argo-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
